--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="section section-header">
         <div class="parallax filter filter-color-red">
             <div class="image"
-                style="background-image: url('assets/img/header-1.jpeg')">
+                style="background-image: url('assets/img/cyber_range_header.JPG')">
             </div>
             <div class="container">
                 <div class="content">
